--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	</head>
 	<body style="background-color:darkgrey;">
 	<div style="margin:auto;width:1505px;">
+	<div style="width:750px;margin:auto;padding-top:100px;">
+		<img src="assets/spunky_small_black.png">
+	</div>
 	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
 		<a href="https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken-public/" title="Regret" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
