linked all photos

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			</span>
 		</span>
 		</a>
+		<a href="https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/" title="Cypress &amp; Keibo" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
@@ -28,6 +29,7 @@
 		</span>
 	</div>
 	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+		<a href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
@@ -36,6 +38,8 @@
 				<img src="https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg" class="photo-content-35">
 			</span>
 		</span>
+		</a>
+		<a href="https://www.flickr.com/photos/195169182@N08/52200844743/in/datetaken/" title="Dashy &amp; Co" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
@@ -44,8 +48,10 @@
 				<img src="https://live.staticflickr.com/65535/52200844743_769bc678a7.jpg" class="photo-content-35">
 			</span>
 		</span>
+		</a>
 	</div>
 	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+		<a href="https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/" title="Sparks" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
@@ -54,6 +60,7 @@
 				<img src="https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg" class="photo-content-120">
 			</span>
 		</span>
+		<a href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
@@ -62,6 +69,7 @@
 				<img src="https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg" class="photo-content-120">
 			</span>
 		</span>
+		</a>
 	</div>
 	</div>
 	</body>
