added social media links

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
 		</span>
 		</a>
 	</div>
+	<div style="width:404px;margin:auto;">
+		<div style="display:block;margin-top:70px;margin-bottom:70px;">
+			<a href="https://twitter.com/SpunkyH0rn"><img src="assets/twitter.png"></a>
+			<a href="https://t.me/SpunkyH0rn"><img src="assets/telegram.png"></a>
+		</div>
+	</div>
 	</div>
 	</body>
 </html>
