added portrait frame + email

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html>
-	<head>
+<html><head>
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
 	<body style="background-color:darkgrey;">
@@ -27,8 +26,7 @@
 				<img src="https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg" class="photo-content-35">
 			</span>
 		</span>
-	</div>
-	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+	</a></div><div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
 		<a href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
@@ -60,7 +58,7 @@
 				<img src="https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg" class="photo-content-120">
 			</span>
 		</span>
-		<a href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
+		</a><a href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
 		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
@@ -71,12 +69,13 @@
 		</span>
 		</a>
 	</div>
-	<div style="width:404px;margin:auto;">
+	<div style="width:608px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			<a href="https://twitter.com/SpunkyH0rn"><img src="assets/twitter.png"></a>
+			<a href="mailto:SpunkyH0rn@protonmail.com"><img src="assets/email.png"></a>
 			<a href="https://t.me/SpunkyH0rn"><img src="assets/telegram.png"></a>
 		</div>
 	</div>
 	</div>
-	</body>
-</html>
+	
+</body></html>
