consolidated styling in classes + updated footer links to make new tab

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	</head>
 	<body style="background-color:darkgrey;">
 	<div style="margin:auto;width:1505px;">
-	<div style="width:850px;margin:auto;padding-top:100px;">
+	<div class="header">
 		<img src="assets/spunky_small_white_shadow.png">
 	</div>
-	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+	<div class="photo-row">
 		<a href="https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken-public/" title="Regret" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
 			</span>
@@ -18,7 +18,7 @@
 		</span>
 		</a>
 		<a href="https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/" title="Cypress &amp; Keibo" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
 			</span>
@@ -26,9 +26,11 @@
 				<img src="https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg" class="photo-content-35">
 			</span>
 		</span>
-	</a></div><div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+		</a>
+	</div>
+	<div class="photo-row">
 		<a href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
 			</span>
@@ -38,7 +40,7 @@
 		</span>
 		</a>
 		<a href="https://www.flickr.com/photos/195169182@N08/52200844743/in/datetaken/" title="Dashy &amp; Co" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/35_frame.png" class="photo-border">
 			</span>
@@ -48,9 +50,9 @@
 		</span>
 		</a>
 	</div>
-	<div style="display:block;height:650px;margin-top:50px;margin-bottom:50px;">
+	<div class="photo-row">
 		<a href="https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/" title="Sparks" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
 			</span>
@@ -59,7 +61,7 @@
 			</span>
 		</span>
 		</a><a href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
-		<span style="display:inline-block;width:650px;margin-left:50px;margin-right:50px;">
+		<span class="photo-item">
 			<span class="photo-container">
 				<img src="assets/120_frame.png" class="photo-border">
 			</span>
@@ -71,9 +73,9 @@
 	</div>
 	<div style="width:608px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
-			<a href="https://twitter.com/SpunkyH0rn"><img src="assets/twitter.png"></a>
+			<a href="https://twitter.com/SpunkyH0rn" target="_blank"><img src="assets/twitter.png"></a>
 			<a href="mailto:SpunkyH0rn@protonmail.com"><img src="assets/email.png"></a>
-			<a href="https://t.me/SpunkyH0rn"><img src="assets/telegram.png"></a>
+			<a href="https://t.me/SpunkyH0rn" target="_blank"><img src="assets/telegram.png"></a>
 		</div>
 	</div>
 	</div>
