updated email icon

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<div style="width:608px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			<a href="https://twitter.com/SpunkyH0rn" target="_blank"><img src="assets/twitter.png"></a>
-			<a href="mailto:SpunkyH0rn@protonmail.com"><img src="assets/email.png"></a>
+			<a href="mailto:SpunkyH0rn@protonmail.com"><img src="assets/email-2.png"></a>
 			<a href="https://t.me/SpunkyH0rn" target="_blank"><img src="assets/telegram.png"></a>
 		</div>
 	</div>
