added portrait support; inactive scrolling

--- a/index.html
+++ b/index.html
@@ -6,72 +6,81 @@
 	<div class="header">
 		<img src="assets/spunky_small_white_shadow.png">
 	</div>
+	<div id="photos" style="opacity:1;">
 	<div class="photo-row">
-		<a href="https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken-public/" title="Regret" target="_blank">
+		<a id="photolink0" href="https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken-public/" title="Regret" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/120_frame.png" class="photo-border">
+				<img id="photoframe0" src="assets/120_frame.png" class="photo-border">
 			</span>
 			<span style="position:relative;">
-				<img src="https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg" class="photo-content-120">
+				<img id="photoimage0" src="https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg" class="photo-content-120">
 			</span>
 		</span>
 		</a>
-		<a href="https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/" title="Cypress &amp; Keibo" target="_blank">
+		<a id="photolink1" href="https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/" title="Cypress &amp; Keibo" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/35_frame.png" class="photo-border">
+				<img id="photoframe1" src="assets/35_frame.png" class="photo-border">
 			</span>
 			<span style="position:relative;">
-				<img src="https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg" class="photo-content-35">
+				<img id="photoimage1" src="https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg" class="photo-content-35">
 			</span>
 		</span>
 		</a>
 	</div>
 	<div class="photo-row">
-		<a href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
+		<a id="photolink2" href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/35_frame.png" class="photo-border">
+				<img id="photoframe2" src="assets/35_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img src="https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg" class="photo-content-35">
+				<img id="photoimage2" src="https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg" class="photo-content-35">
 			</span>
 		</span>
 		</a>
-		<a href="https://www.flickr.com/photos/195169182@N08/52200844743/in/datetaken/" title="Dashy &amp; Co" target="_blank">
+		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/" title="Symphony" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/35_frame.png" class="photo-border">
+				<img id="photoframe3" src="assets/35_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img src="https://live.staticflickr.com/65535/52200844743_769bc678a7.jpg" class="photo-content-35">
+				<img id="photoimage3" src="https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg" class="photo-content-35">
 			</span>
 		</span>
 		</a>
 	</div>
 	<div class="photo-row">
-		<a href="https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/" title="Sparks" target="_blank">
+		<a id="photolink4" href="https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/" title="Sparks" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/120_frame.png" class="photo-border">
+				<img id="photoframe4" src="assets/120_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img src="https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg" class="photo-content-120">
+				<img id="photoimage4" src="https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg" class="photo-content-120">
 			</span>
 		</span>
-		</a><a href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
+		</a>
+		<a id="photolink5" href="https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/" title="Lytter" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img src="assets/120_frame.png" class="photo-border">
+				<img id="photoframe5" src="assets/120_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img src="https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg" class="photo-content-120">
+				<img id="photoimage5" src="https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg" class="photo-content-120">
 			</span>
 		</span>
 		</a>
 	</div>
-
+	</div>
+<!--	<div style="width:850px;margin:auto;">
+		<div style="display:block;margin-top:70px;margin-bottom:70px;">
+			 <button onclick="goPage(-1)"><img src="assets/arrow-left.png"></button>
+			<span style="display:inline-block;width:442px"></span>
+			 <button onclick="goPage(1)"><img src="assets/arrow-right.png"></button>
+		</div>
+	</div> -->
 	<div style="width:608px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			<a href="https://twitter.com/SpunkyH0rn" target="_blank"><img src="assets/twitter.png"></a>
@@ -82,3 +91,90 @@
 	</div>
 	
 </body></html>
+<script>
+
+
+
+	// let's implement that "scrolling" feature
+	currentPage=0;
+	pages=[
+		[
+			["https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/","Regret","https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/","Cypress &amp; Keibo","https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/","Bash","https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/","Symphony","https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/","Lytter","https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg","120"]
+		],
+		[
+			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"]
+		],
+		[
+			["https://www.flickr.com/photos/195169182@N08/52024596988/in/album-72177720298042776/","Sparks","https://live.staticflickr.com/65535/52024596988_25d882c73c.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52229566007/in/album-72177720300659322/","Kimi","https://live.staticflickr.com/65535/52229566007_196f6ecbc5.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/51985709215/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985709215_d29e0ce9b6.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/51998676738/in/album-72177720298042776/","A psychedelic fellow","https://live.staticflickr.com/65535/51998676738_6204df364c.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52197482352/in/album-72177720300361763/","Regret","https://live.staticflickr.com/65535/52197482352_4cfccff9e3.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52208581404/in/album-72177720300361763/","Flip","https://live.staticflickr.com/65535/52208581404_2062cb36bc.jpg","35P"]
+		]
+	];
+	numPages=pages.length-1;
+	
+	function goPage(offset) {
+		targetPage=currentPage+offset;
+		
+		// let's make sure we aren't going out of bounds
+		if(targetPage < 0) {
+			targetPage=numPages;
+		} else if (targetPage > numPages) {
+			targetPage=0;
+		}
+		
+		//alert(targetPage);
+		currentPage=targetPage;
+		//alert("current page" + currentPage);
+		
+		target=pages[targetPage];
+		
+		document.getElementById("photolink0").href = target[0][0];
+		document.getElementById("photolink0").title = target[0][1];
+		document.getElementById("photoframe0").src = "assets/" + target[0][3] + "_frame.png";
+		document.getElementById("photoimage0").className = "photo-content-" + target[0][3];
+		document.getElementById("photoimage0").src = target[0][2];
+		
+		document.getElementById("photolink1").href = target[1][0];
+		document.getElementById("photolink1").title = target[1][1];
+		document.getElementById("photoframe1").src = "assets/" + target[1][3] + "_frame.png";
+		document.getElementById("photoimage1").className = "photo-content-" + target[1][3];
+		document.getElementById("photoimage1").src = target[1][2];
+		
+		document.getElementById("photolink2").href = target[2][0];
+		document.getElementById("photolink2").title = target[2][1];
+		document.getElementById("photoframe2").src = "assets/" + target[2][3] + "_frame.png";
+		document.getElementById("photoimage2").className = "photo-content-" + target[2][3];
+		document.getElementById("photoimage2").src = target[2][2];
+		
+		document.getElementById("photolink3").href = target[3][0];
+		document.getElementById("photolink3").title = target[3][1];
+		document.getElementById("photoframe3").src = "assets/" + target[3][3] + "_frame.png";
+		document.getElementById("photoimage3").className = "photo-content-" + target[3][3];
+		document.getElementById("photoimage3").src = target[3][2];
+		
+		document.getElementById("photolink4").href = target[4][0];
+		document.getElementById("photolink4").title = target[4][1];
+		document.getElementById("photoframe4").src = "assets/" + target[4][3] + "_frame.png";
+		document.getElementById("photoimage4").className = "photo-content-" + target[4][3];
+		document.getElementById("photoimage4").src = target[4][2];
+		
+		document.getElementById("photolink5").href = target[5][0];
+		document.getElementById("photolink5").title = target[5][1];
+		document.getElementById("photoframe5").src = "assets/" + target[5][3] + "_frame.png";
+		document.getElementById("photoimage5").className = "photo-content-" + target[5][3];
+		document.getElementById("photoimage5").src = target[5][2];
+	}
+</script>
