--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Live Free of Die. -->
 <html><head>
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
@@ -106,7 +107,7 @@
 			["https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg","120"],
 			["https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/","Lytter","https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg","120"]
 		],
-		[
+/*		[
 			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
 			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"],
 			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
@@ -121,7 +122,7 @@
 			["https://www.flickr.com/photos/195169182@N08/51998676738/in/album-72177720298042776/","A psychedelic fellow","https://live.staticflickr.com/65535/51998676738_6204df364c.jpg","35"],
 			["https://www.flickr.com/photos/195169182@N08/52197482352/in/album-72177720300361763/","Regret","https://live.staticflickr.com/65535/52197482352_4cfccff9e3.jpg","35"],
 			["https://www.flickr.com/photos/195169182@N08/52208581404/in/album-72177720300361763/","Flip","https://live.staticflickr.com/65535/52208581404_2062cb36bc.jpg","35P"]
-		]
+		]*/
 	];
 	numPages=pages.length-1;
 	
