--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
 		</a>
 	</div>
 	<div class="photo-row">
-		<a id="photolink2" href="https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/" title="Bash" target="_blank">
+		<a id="photolink2" href="https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/" title="Symphony" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
 				<img id="photoframe2" src="assets/35_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img id="photoimage2" src="https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg" class="photo-content-35">
+				<img id="photoimage2" src="https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg" class="photo-content-35">
 			</span>
 		</span>
 		</a>
-		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/" title="Symphony" target="_blank">
+		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/" title="Arno" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img id="photoframe3" src="assets/35_frame.png" class="photo-border">
+				<img id="photoframe3" src="assets/120_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img id="photoimage3" src="https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg" class="photo-content-35">
+				<img id="photoimage3" src="https://live.staticflickr.com/65535/52293363515_1a3869a0d7.jpg" class="photo-content-120">
 			</span>
 		</span>
 		</a>
@@ -102,8 +102,8 @@
 		[
 			["https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/","Regret","https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg","120"],
 			["https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/","Cypress &amp; Keibo","https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52203643429/in/datetaken/","Bash","https://live.staticflickr.com/65535/52203643429_1e9815e65e.jpg","35"],
 			["https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/","Symphony","https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken-public/","Arno","https://live.staticflickr.com/65535/52293363515_1a3869a0d7.jpg","120"],
 			["https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg","120"],
 			["https://www.flickr.com/photos/195169182@N08/52226440056/in/datetaken/","Lytter","https://live.staticflickr.com/65535/52226440056_770cc398f0.jpg","120"]
 		],
