added 645 frames; added scroll feature; updated photos

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			</span>
 		</span>
 		</a>
-		<a id="photolink1" href="https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/" title="Cypress &amp; Keibo" target="_blank">
+		<a id="photolink1" href="https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/" title="Arno" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img id="photoframe1" src="assets/35_frame.png" class="photo-border">
+				<img id="photoframe1" src="assets/120_frame.png" class="photo-border">
 			</span>
-			<span style="position:relative;">
-				<img id="photoimage1" src="https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg" class="photo-content-35">
+			<span class="photo-container">
+				<img id="photoimage1" src="https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg" class="photo-content-120">
 			</span>
 		</span>
 		</a>
@@ -41,47 +41,47 @@
 			</span>
 		</span>
 		</a>
-		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken/" title="Arno" target="_blank">
+		<a id="photolink3" href="https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken-public/" title="Kipper" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img id="photoframe3" src="assets/120_frame.png" class="photo-border">
+				<img id="photoframe3" src="assets/645L_frame.png" class="photo-border">
 			</span>
-			<span class="photo-container">
-				<img id="photoimage3" src="https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg" class="photo-content-120">
+			<span style="position:relative;">
+				<img id="photoimage3" src="https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg" class="photo-content-645L">
 			</span>
 		</span>
 		</a>
 	</div>
 	<div class="photo-row">
-		<a id="photolink4" href="https://www.flickr.com/photos/195169182@N08/52293182969/in/datetaken/" title="Valentine" target="_blank">
+		<a id="photolink4" href="https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/" title="Sparks" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
-				<img id="photoframe4" src="assets/120_frame.png" class="photo-border">
+				<img id="photoframe4" src="assets/645L_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img id="photoimage4" src="https://live.staticflickr.com/65535/52293182969_8acea405f7.jpg" class="photo-content-120">
+				<img id="photoimage4" src="https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg" class="photo-content-645L">
 			</span>
 		</span>
 		</a>
-		<a id="photolink5" href="https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/" title="Sparks" target="_blank">
+		<a id="photolink5" href="https://www.flickr.com/photos/195169182@N08/52291879832/in/datetaken/" title="Kimi" target="_blank">
 		<span class="photo-item">
 			<span class="photo-container">
 				<img id="photoframe5" src="assets/120_frame.png" class="photo-border">
 			</span>
 			<span class="photo-container">
-				<img id="photoimage5" src="https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg" class="photo-content-120">
+				<img id="photoimage5" src="https://live.staticflickr.com/65535/52291879832_4e16dcfc7a.jpg" class="photo-content-120">
 			</span>
 		</span>
 		</a>
 	</div>
 	</div>
-<!--	<div style="width:850px;margin:auto;">
+	<div style="width:850px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			 <button onclick="goPage(-1)"><img src="assets/arrow-left.png"></button>
 			<span style="display:inline-block;width:442px"></span>
 			 <button onclick="goPage(1)"><img src="assets/arrow-right.png"></button>
 		</div>
-	</div> -->
+	</div>
 	<div style="width:608px;margin:auto;">
 		<div style="display:block;margin-top:70px;margin-bottom:70px;">
 			<a href="https://twitter.com/SpunkyH0rn" target="_blank"><img src="assets/twitter.png"></a>
@@ -94,35 +94,29 @@
 </body></html>
 <script>
 
-
-
 	// let's implement that "scrolling" feature
 	currentPage=0;
 	pages=[
 		[
 			["https://www.flickr.com/photos/195169182@N08/52226438723/in/datetaken/","Regret","https://live.staticflickr.com/65535/52226438723_a2fbe7cb4a.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52203633659/in/datetaken/","Cypress &amp; Keibo","https://live.staticflickr.com/65535/52203633659_925f1b0b6f.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/","Symphony","https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg","35"],
 			["https://www.flickr.com/photos/195169182@N08/52293363515/in/datetaken-public/","Arno","https://live.staticflickr.com/65535/52293363515_ed0f9544e0.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52293182969/in/datetaken/","Valentine","https://live.staticflickr.com/65535/52293182969_8acea405f7.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52226706914/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52226706914_b389986e6e.jpg","120"]
+			["https://www.flickr.com/photos/195169182@N08/52227497616/in/datetaken/","Symphony","https://live.staticflickr.com/65535/52227497616_386e33ba95.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52387616644/in/datetaken-public/","Kipper","https://live.staticflickr.com/65535/52387616644_759b8c716f.jpg","645L"],
+			["https://www.flickr.com/photos/195169182@N08/52387709604/in/datetaken/","Sparks","https://live.staticflickr.com/65535/52387709604_2cbf302183.jpg","645L"],
+			["https://www.flickr.com/photos/195169182@N08/52291879832/in/datetaken/","Kimi","https://live.staticflickr.com/65535/52291879832_4e16dcfc7a.jpg","120"]
 		],
-/*		[
-			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/51985214233/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985214233_73ae8f9360.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/52210787678/in/album-72177720298244220/","June 17th Dallas walk","https://live.staticflickr.com/65535/52210787678_29f381d4e2.jpg","35"]
-		],
+
+		
+		
+		
 		[
-			["https://www.flickr.com/photos/195169182@N08/52024596988/in/album-72177720298042776/","Sparks","https://live.staticflickr.com/65535/52024596988_25d882c73c.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52229566007/in/album-72177720300659322/","Kimi","https://live.staticflickr.com/65535/52229566007_196f6ecbc5.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/51985709215/in/album-72177720300710716/","Kimi","https://live.staticflickr.com/65535/51985709215_d29e0ce9b6.jpg","120"],
-			["https://www.flickr.com/photos/195169182@N08/51998676738/in/album-72177720298042776/","A psychedelic fellow","https://live.staticflickr.com/65535/51998676738_6204df364c.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52197482352/in/album-72177720300361763/","Regret","https://live.staticflickr.com/65535/52197482352_4cfccff9e3.jpg","35"],
-			["https://www.flickr.com/photos/195169182@N08/52208581404/in/album-72177720300361763/","Flip","https://live.staticflickr.com/65535/52208581404_2062cb36bc.jpg","35P"]
-		]*/
+			["https://www.flickr.com/photos/195169182@N08/52203377401/in/datetaken/","Grace","https://live.staticflickr.com/65535/52203377401_ac54a870e2.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52387741805/in/datetaken-public/","Gali","https://live.staticflickr.com/65535/52387741805_4bed6d937c.jpg","645P"],
+			["https://www.flickr.com/photos/195169182@N08/51998676718/in/datetaken/","Crowd","https://live.staticflickr.com/65535/51998676718_61a5b18399.jpg","35"],
+			["https://www.flickr.com/photos/195169182@N08/52225439312/in/datetaken/","AC 2022","https://live.staticflickr.com/65535/52225439312_3e70816f8b.jpg","120"],
+			["https://www.flickr.com/photos/195169182@N08/52387549523/in/datetaken-public/","Kipper","https://live.staticflickr.com/65535/52387549523_cf9ec30fbb.jpg","645P"],
+			["https://www.flickr.com/photos/195169182@N08/51998676783/in/datetaken","Aria","https://live.staticflickr.com/65535/51998676783_15f3a9efd0.jpg","35p"]
+		]
 	];
 	numPages=pages.length-1;
 	
