fixed some bullshit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Live Free or Die. -->
 <html><head>
-		<link rel="stylesheet" href="assets/style.css">
+		<link rel="stylesheet" href="assets/style.css?rnd=2">
 	</head>
 	<body style="background-color:darkgrey;">
 	<div style="margin:auto;width:1505px;">
